// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Utilization /> renders correctly 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title"
    >
      Cluster Utilization
    </h2>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-utilization__items"
    >
      <div
        class="kubevirt-utilization__item"
      >
        <div
          class="row"
        >
          <div
            class="col-lg-2 col-md-2 col-sm-2 col-xs-2"
          >
            CPU
          </div>
          <div
            class="kubevirt-utilization__item-actual col-lg-3 col-md-3 col-sm-3 col-xs-3"
          >
            50 %
          </div>
          <div
            class="kubevirt-utilization__item-chart col-lg-7 col-md-7 col-sm-7 col-xs-7"
          >
            <div
              class=" chart-pf-sparkline"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Utilization /> renders correctly in Loading state 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <h2
      class="card-pf-title"
    >
      Cluster Utilization
    </h2>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-utilization__items"
    >
      <div
        class="kubevirt-utilization__item"
      >
        <div
          class="row"
        >
          <div
            class="col-lg-2 col-md-2 col-sm-2 col-xs-2"
          >
            CPU
          </div>
          <div
            class="kubevirt-utilization__item-actual col-lg-3 col-md-3 col-sm-3 col-xs-3"
          />
          <div
            class="kubevirt-utilization__item-chart col-lg-7 col-md-7 col-sm-7 col-xs-7"
          >
            <div>
              <div
                class="spinner spinner-md blank-slate-pf-icon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
